--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
 language: node_js
 node_js:
  - "node"
+
+services:
+  - docker
+
+before_script:
+  - docker-compose up -d
+
+script:
+  - npm run test
