--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   app:
-    image: app_test
+    image: tomasmed18/devops-app:version_1
     restart: always
     ports:
       - "3000:3000"
