--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha ./tests/test-1.js"
+    "test": "mocha ./tests/http-tests.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
