--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha ./tests/http-tests.js"
+    "test": "mocha ./tests/http-tests.js",
+    "browser-test": "mocha ./tests/browser-tests.js --timeout 15000"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -19,6 +20,8 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.2"
+    "chromedriver": "^78.0.1",
+    "mocha": "^6.2.2",
+    "selenium-webdriver": "^4.0.0-alpha.5"
   }
 }
