--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chromedriver": "^78.0.1",
+    "firefox-profile": "^1.3.0",
     "mocha": "^6.2.2",
     "selenium-webdriver": "^4.0.0-alpha.5"
   }
