--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ node_js:
 services:
   - docker
 
+install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.20.1/geckodriver-v0.20.1-linux64.tar.gz
+  - tar -xzf geckodriver-v0.20.0-linux64.tar.gz -C bin
+  - export PATH=$(pwd)/bin:$PATH
+
 before_script:
   - docker-compose up -d
 
