--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chromedriver": "^78.0.1",
+    "codecov": "^3.6.1",
     "firefox-profile": "^1.3.0",
     "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
     "selenium-webdriver": "^4.0.0-alpha.5"
   }
 }
