--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chromedriver": "^78.0.1",
     "codecov": "^3.6.1",
     "firefox-profile": "^1.3.0",
+    "geckodriver": "^1.19.1",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "selenium-webdriver": "^4.0.0-alpha.5"
