--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha ./tests/http-tests.js",
-    "browser-test": "mocha ./tests/browser-tests.js"
+    "browser-test": "mocha ./tests/browser-tests.js",
+    "test-nyc": "nyc --reporter=text mocha"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -27,5 +28,8 @@
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "selenium-webdriver": "^4.0.0-alpha.5"
-  }
+  },
+  "nyc": {
+    "all": true
+ }
 }
