Running unit tests only

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_script:
 script:
   - npm run test
   #- npm run browser-test
-  - docker-compose exec app nyc --reporter=lcovonly --reporter=text mocha
+#- docker-compose exec app nyc --reporter=lcovonly --reporter=text mocha
