--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ services:
 
 addons:
   firefox: "latest"
+  browserstack:
+    username: "tomasmedina1"
+    access_key: "BROWSERSTACK_KEY"
 
 install:
   - wget https://github.com/mozilla/geckodriver/releases/download/v0.20.1/geckodriver-v0.20.1-linux64.tar.gz
@@ -22,5 +25,5 @@ before_script:
 
 script:
   - npm run test
-  - npm run browser-test
+  - npm run browserstack-test
 #- docker-compose exec app nyc --reporter=lcovonly --reporter=text mocha
