--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
   firefox: "latest"
   browserstack:
     username: "tomasmedina1"
-    access_key: "$BROWSERSTACK_KEY"
+    access_key: BROWSERSTACK_KEY
 
 install:
   - wget https://github.com/mozilla/geckodriver/releases/download/v0.20.1/geckodriver-v0.20.1-linux64.tar.gz
