added browser-test execution

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ before_script:
 
 script:
   - npm run test
-#  - npm run browser-test
+  - npm run browser-test
 #  - npm run browserstack-test
 #- docker-compose exec app nyc --reporter=lcovonly --reporter=text mocha
