--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "test": "mocha ./tests/http-tests.js",
-    "browser-test": "mocha ./tests/browser-tests.js",
+    "browser-test": "mocha ./tests/browser-tests.js --timeout 20000",
     "browserstack-test": "node ./tests/test-browserstack.js",
     "selenium-version": "selenium-webdriver --version"
   },
